css/main.css
body {
  background-color: #f5f5f5;
  color: #616161;
  user-select: none;
  font-family: 'Roboto', sans-serif;
}

* {
  outline-color: transparent;
  -webkit-tap-highlight-color: transparent;
}

a, code {
  color: #575757;
}

::-webkit-scrollbar {
  background-color: #393939;
}

::-webkit-scrollbar-thumb {
  background-color: #ffffff;
}

::-webkit-scrollbar {
  width: 4px;
  height: 4px;
}

::-webkit-scrollbar-thumb {
  border-radius: 4px;
}

::-webkit-scrollbar-track {
  background-color: #424242;
}

.left {
  float: left;
}

.right {
  float: right;
}

.center-align {
  text-align: center;
}

.vertical-center {
  margin: 0;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

.side-scroll, .mobile-scroll {
  display: flex;
  flex-wrap: nowrap;
  justify-content: flex-start;
  overflow-x: auto;
  overflow-y: hidden;
  max-width: 100vw;
}

.result-switch.flex {
  margin-top: -6px;
}

.result-switch button {
  margin: 6px 9px;
  background-color: #575757;
}

.list-switch-buttons {
  text-align: center;
}

.list-switch-buttons button {
  min-width: 90px;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
}

.list-switch-buttons button.active {
  background-color: #ffffff;
  color: #000000;
}

.list-switch-buttons button.active span {
  display: inline;
}

.list-switch-buttons button span {
  display: none;
}

.list-switch-buttons button i {
  padding-right: 5px;
}

.nav-menu-content>div {
  max-width: 1440px;
  margin: 0 auto;
}

.nav-menu, .nav-menu-content {
  background-color: #ffffff;
  height: 50px;
}

.nav-menu-content>div {
  height: inherit;
}

.nav-button.pseudo {
  color: #ffffff;
}

.nav-search {
  width: 596px;
  max-width: 34%;
  position: relative;
  float: right;
}

.nav-search input {
  background-color: #e7e7e7;
  color: #151515;
  border: none;
  opacity: 0;
  width: 40px;
  float: right;
}

.nav-search input:focus {
  width: 100%;
}

.nav-buttons {
  max-width: 40%;
  float: left;
  position: absolute;
  white-space: nowrap;
}

.nav-buttons a, .nav-buttons button {
  background-color: transparent;
  color: #575757;
  padding-left: 7px;
  padding-right: 7px;
}

.dropbtn.subdrop {
  margin: 0 auto;
  display: block;
}

.dropbtn.subdrop+div.dropdown-content {
  display: none;
  margin-left: 0;
}

.dropbtn.subdrop:hover+div.dropdown-content, .dropbtn.subdrop+div.dropdown-content:hover {
  display: block;
  margin-top: -6px;
}

@media only screen and (min-width: 493px) {
  .nav-search {
    max-width: 49%;
  }
}

@media only screen and (max-width: 767px) {
  .dropdown-content, .dropbtn.subdrop:hover+div.dropdown-content, .dropbtn.subdrop+div.dropdown-content:hover {
    background-color: #ffffff;
    height: 110px;
  }
  .dropdown-content {
    display: none;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1;
    height: 100vh;
    width: 240px;
    margin-left: -11px;
    -webkit-animation-name: slideInLeft;
    animation-name: slideInLeft;
  }
  .dropdown-content a, .dropbtn.subdrop, .dropbtn.subdrop+div.dropdown-content a {
    color: #000000;
  }
  .dropdown-content a {
    padding: 12px 16px;
    display: block;
  }
  .dropdown-content a:hover {
    background-color: #f1f1f1
  }
  .dropdown:hover .dropdown-content {
    display: block;
  }
  .dropbtn.subdrop {
    border-bottom: 1px rgba(189, 189, 189, 0.5) solid;
  }
}

@media only screen and (min-width: 767px) {
  .dropbtn {
    display: none;
  }
  .dropbtn.subdrop:hover+div.dropdown-content, .dropbtn.subdrop+div.dropdown-content:hover {
    display: grid;
    position: absolute;
    margin-top: 42px;
    background-color: #000000;
  }
  .dropbtn.subdrop+div.dropdown-content a {
    color: #ffffff;
    padding: 2px 9px;
  }
}

.nav-search i {
  color: #575757;
  float: right;
  position: absolute;
  right: 10px;
  top: 12px;
}

.nav-search, .nav-search input {
  height: 100%;
}

@media only screen and (min-width: 768px) {
  .nav-search i {
    color: #9e9e9e;
  }
  .nav-search input {
    width: 100%;
    opacity: 1;
  }
  .nav-search input:focus {
    width: 100%;
  }
  .nav-buttons {
    position: static;
    max-width: 27%;
  }
  .result-switch.mobile-scroll {
    display: flex;
    flex-wrap: wrap;
    overflow-x: visible;
    overflow-y: visible;
  }
}

.content-wrapper-container.flex {
  max-width: 1440px;
  margin: 0 auto;
  position: relative;
  flex-direction: column-reverse
}

.content-wrapper {
  position: relative;
  max-width: 1440px;
  padding-bottom: 80px;
}

.post-actions>*:hover {
  background-color: #d6d6d6;
}

.flex .flex-padding-reset {
  padding-left: 0;
  padding-right: 0;
  padding-bottom: 0;
}

@media only screen and (max-width:699px) {
  .flex-margin-reset {
    position: absolute;
    width: 100vw;
    left: calc(-50vw + 50%);
  }
  .flex-margin-reset.extend-padding {
    padding-bottom: 90px;
  }
}

@media only screen and (min-width:700px) and (max-width:999px) {
  .flex-margin-reset {
    padding-top: 0.3em;
  }
}

.flex-margin-reset.desktop {
  padding-top: 0;
  width: 100vw;
}

@media only screen and (min-width:999px) {
  .flex-margin-reset.desktop {
    margin-top: -0.3em;
  }

  .content-wrapper {
    left: 0;
    position: absolute;
    width: calc(100% - 337px);
    max-width: none;
  }

  .content-wrapper-container.flex {
    flex-direction: row;
    padding-top: 0.3em
  }

  .content-wrapper-container.flex > div:not(:last-child) {
    padding-right: 0;
  }
}

.center-element {
  margin: 0 auto;
  display: block;
}

.left-divider {
  border-left: 1px solid;
}

.right-divider {
  border-right: 1px solid;
}

.top-divider {
  border-top: 1px solid;
}

.bottom-divider {
  border-bottom: 1px solid;
}

.left-divider, .right-divider, .top-divider, .bottom-divider {
  border-color: rgba(189, 189, 189, 0.5);
}

.pointer {
  cursor: pointer;
}

.dismiss-overlay {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  z-index: -1;
}

.panel-body {
  z-index: 10001;
  height: 100%;
  max-width: 100%;
  width: 420px;
  right: 0;
  background-color: rgba(255, 255, 255, 0.75);
  bottom: 0;
  position: fixed;
  overflow-y: scroll;
}

.panel-bg {
  width: 100%;
  height: 100%;
  z-index: 10000;
  background-color: rgba(0, 0, 0, 0.75);
  position: fixed;
  bottom: 0;
  left: 0;
  display: none;
}

@media only screen and (min-width: 421px) {
  .panel-body.fadeInRight:not(.fadeOutRight):not(.none)~.panel-bg {
    display: block;
  }
  
  .panel-body {
    box-shadow: 7px 5px 6px 9px rgba(0, 0, 0, 0.5);
  }
}

